--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@arco-design/web-vue": "^2.54.6",
+    "less": "^4.2.0",
     "vue": "^3.4.15",
     "vue-router": "^4.2.5"
   },
