--- a/package.json
+++ b/package.json
@@ -14,13 +14,18 @@
   },
   "dependencies": {
     "@arco-design/web-vue": "^2.54.6",
+    "axios": "^1.6.7",
     "less": "^4.2.0",
+    "mockjs": "^1.1.0",
+    "pinia": "^2.1.7",
     "vue": "^3.4.15",
+    "vue-i18n": "^9.10.1",
     "vue-router": "^4.2.5"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.3.3",
     "@tsconfig/node20": "^20.1.2",
+    "@types/mockjs": "^1.0.10",
     "@types/node": "^20.11.10",
     "@vitejs/plugin-vue": "^5.0.3",
     "@vue/eslint-config-prettier": "^8.0.0",
